ft_memmove failed moulinette

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,18 +6,26 @@
 #    By: jsoh <jsoh@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/06 21:30:08 by jsoh              #+#    #+#              #
-#    Updated: 2025/05/11 16:46:34 by jsoh             ###   ########.fr        #
+#    Updated: 2025/05/18 16:00:52 by jsoh             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CC = gcc
+CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
-SRC		= $(wildcard *.c)
-OBJ		= $(SRC:.c=.o)
-NAME	= libft.a
-BONUS	= lstnew lstadd_front lstsize lstlast lstadd_back lstdelone lstclear lstiter lstmap
-BONUS_OBJ = $(BONUS:.c=.o)
+SRC_NAMES = memset bzero memcpy memmove memchr memcmp strlen isalpha isdigit isalnum \
+			isascii isprint toupper tolower strchr strrchr strncmp strlcpy strlcat strnstr \
+			atoi calloc strdup substr strjoin strtrim split itoa strmapi putchar_fd putstr_fd \
+			putendl_fd putnbr_fd striteri
+
+SRC_FILES = $(addprefix ft_, $(addsuffix .c, $(SRC_NAMES)))
+OBJ = $(SRC_FILES:.c=.o)
+
+BONUS = lstnew_bonus lstadd_front_bonus lstsize_bonus lstlast_bonus lstadd_back_bonus lstdelone_bonus lstclear_bonus lstiter_bonus lstmap_bonus
+BONUS_SRC = $(addprefix ft_, $(addsuffix .c, $(BONUS)))
+BONUS_OBJ = $(BONUS_SRC:.c=.o)
+
+NAME = libft.a
 
 all: $(NAME)
 
@@ -27,15 +35,11 @@ $(NAME): $(OBJ)
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-bonus:
-	@echo "Bonus files:"
-	@for file in $(BONUS); do echo $$file; done
-
-bonus_compile: $(BONUS_OBJ)
-	@echo "Bonus object files compiled: $(BONUS_OBJ)"
+bonus: $(BONUS_OBJ)
+	ar rcs $(NAME) $(BONUS_OBJ)
 
 clean:
-	rm -f $(OBJ)
+	rm -f $(OBJ) $(BONUS_OBJ)
 
 fclean: clean
 	rm -f $(NAME)
